--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /* Map Container*/
 .map-container {
     position: flex;
-    top: 6.5%;
-    /* move map down to leave space for navbar */
+    flex: 1;
+    top: 0;
+    /* map touches bottom of navbar */
     bottom: 0;
     /* map reaches the bottom of the screen*/
     width: 100%;
@@ -18,6 +19,7 @@
     bottom: 20px;
     right: 20px;
     background-color: black;
+    color: white;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -58,17 +60,11 @@
     height: 100vh; /* Adjust height as needed */
 }
 
-/* Style for the map container */
-.map-container {
-    flex: 1; /* Takes up remaining space */
-    /* Add any additional styling needed for the map */
-}
-
-
 /* Style for the sidebar */
 .sidebar {
     width: 300px; /* Adjust width as needed */
-    background-color: #f8f9fa; /* Light gray background, or whatever color you prefer */
+    background-color: black; /* Light gray background, or whatever color you prefer */
+    color: white;
     display: flex;
     flex-direction: column; /* Stack the layers control and legend on top of each other */
     padding: 10px; /* Adjust padding as needed */
